Source/WebKit/mac/WebCoreSupport/CorrectionPanel.mm
@@ -46,8 +46,6 @@ static inline NSCorrectionIndicatorType correctionIndicatorType(CorrectionPanelI
 CorrectionPanel::CorrectionPanel()
     : m_wasDismissedExternally(false)
     , m_reasonForDismissing(ReasonForDismissingCorrectionPanelIgnored)
-    , m_resultCondition(AdoptNS, [[NSCondition alloc] init])
-    , m_isDismissing(false)
 {
 }
 
@@ -79,35 +77,23 @@ void CorrectionPanel::show(WebView* view, CorrectionPanelInfo::PanelType type, c
     [[NSSpellChecker sharedSpellChecker] showCorrectionIndicatorOfType:indicatorType primaryString:replacementStringAsNSString alternativeStrings:alternativeStrings forStringInRect:[view convertRect:boundingBoxOfReplacedString fromView:nil] view:m_view.get() completionHandler:^(NSString* acceptedString) {
         handleAcceptedReplacement(acceptedString, replacedStringAsNSString, replacementStringAsNSString, indicatorType);
     }];
-    m_isDismissing = false;
 }
 
-void CorrectionPanel::dismiss(ReasonForDismissingCorrectionPanel reason)
+String CorrectionPanel::dismiss(ReasonForDismissingCorrectionPanel reason)
 {
-    dismissInternal(reason, true);
+    return dismissInternal(reason, true);
 }
 
-String CorrectionPanel::dismissSoon(ReasonForDismissingCorrectionPanel reason)
-{
-    dismissInternal(reason, true);
-    [m_resultCondition.get() lock];
-    while (m_isDismissing)
-        [m_resultCondition.get() wait];
-    [m_resultCondition.get() unlock];
-    return m_resultForSynchronousDismissal.get();
-}
-
-void CorrectionPanel::dismissInternal(ReasonForDismissingCorrectionPanel reason, bool dismissingExternally)
+String CorrectionPanel::dismissInternal(ReasonForDismissingCorrectionPanel reason, bool dismissingExternally)
 {
     if (!isShowing())
-        return;
-        
-    m_isDismissing = true;
+        return String();
+    
     m_wasDismissedExternally = dismissingExternally;
     m_reasonForDismissing = reason;
-    m_resultForSynchronousDismissal.clear();
+    m_resultForDismissal.clear();
     [[NSSpellChecker sharedSpellChecker] dismissCorrectionIndicatorForView:m_view.get()];
-    m_view.clear();
+    return m_resultForDismissal.get();
 }
 
 void CorrectionPanel::recordAutocorrectionResponse(WebView* view, NSCorrectionResponse response, const String& replacedString, const String& replacementString)
@@ -116,7 +102,10 @@ void CorrectionPanel::recordAutocorrectionResponse(WebView* view, NSCorrectionRe
 }
 
 void CorrectionPanel::handleAcceptedReplacement(NSString* acceptedReplacement, NSString* replaced, NSString* proposedReplacement,  NSCorrectionIndicatorType correctionIndicatorType)
-{
+{    
+    if (!m_view)
+        return;
+    
     NSSpellChecker* spellChecker = [NSSpellChecker sharedSpellChecker];
     NSInteger documentTag = [m_view.get() spellCheckerDocumentTag];
 
@@ -141,15 +130,10 @@ void CorrectionPanel::handleAcceptedReplacement(NSString* acceptedReplacement, N
         break;
     }
     
-    if (!m_wasDismissedExternally)
-        [m_view.get() handleCorrectionPanelResult:acceptedReplacement];
+    [m_view.get() handleCorrectionPanelResult:acceptedReplacement];
+    m_view.clear();
     if (acceptedReplacement)
-        m_resultForSynchronousDismissal.adoptNS([acceptedReplacement copy]);
-    
-    [m_resultCondition.get() lock];
-    m_isDismissing = false;
-    [m_resultCondition.get() signal];
-    [m_resultCondition.get() unlock];
+        m_resultForDismissal.adoptNS([acceptedReplacement copy]);
 }
 
 #endif // !defined(BUILDING_ON_LEOPARD) && !defined(BUILDING_ON_SNOW_LEOPARD)
